# data-product-tracker

./: .doc8.ini  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.rst  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.rst  Dockerfile  Dockerfile.test  LICENSE  Makefile  README.rst  alembic.ini.conv  docker-compose.yml  noxfile.py  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build-wheels.yml  ci.yml  docs.yml  python-package.yml  release.yml
alembic/: env.py
alembic/versions/: 818c30d98288_initializing.py  8f5a5370b95f_swapping_variable_value_column_to_text.py
data_product_tracker/: __init__.py  cli.py  conn.py  contracts.py  libraries.py  reflection.py  sql.py
data_product_tracker/io/: trackers.py
data_product_tracker/models/: base.py  dataproducts.py  environment.py  invocation.py
docs/: Makefile  api.rst  conf.py  index.rst  installation.rst  make.bat  numpydoc-style-guide.rst  requirements.txt  semantic-versioning.md  testing-multi-db.md  testing-with-nox.md  usage.rst
docs/_static/: gh-pages-redirect.html
docs/api/: cli.rst  conn.rst  contracts.rst  exceptions.rst  libraries.rst  models.rst  reflection.rst  tracker.rst  variables.rst
scripts/: check-docs.sh  docker-test.sh  start-test-databases.sh  update-pypi-index.py
src/data_product_tracker/: __init__.py  cli.py  conn.py  contracts.py  exceptions  exceptions.py  libraries.py  reflection.py  sql.py  variables.py
src/data_product_tracker/io/: __init__.py  trackers.py
src/data_product_tracker/models/: __init__.py  base.py  dataproducts.py  environment.py  invocation.py
tests/: __init__.py  conftest.py  database_configs.py  fixtures.py  strategies.py  test_data_product_tracker.py  test_multi_database.py  test_reflection.py  test_tracker.py
