[build-system]
requires = ["setuptools>=61.0", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "data_product_tracker"
dynamic = ["version"]
description = "An interface to track various data products and their dependencies and environments"
authors = [{name="William Fong", email="willfong@mit.edu"}]
readme = "README.rst"

dependencies = [
    "sqlalchemy>=2.0",
    "click>=8.0",
    "psycopg[binary]>=3.1.19",
    "setuptools>69.5",
    "deal",
    "mmh3",
    "configurables @ git+ssh://git@tessgit.mit.edu/wcfong/configurables.git",
]

[project.urls]
Home = "https://tessgit.mit.edu/wcfong/data-product-tracker"


[project.optional-dependencies]
dev = [
    "black>=24.4",
    "hypothesis>=6",
    "hypothesis_fspaths",
    "mypy==1.10",
    "pytest-cov",
    "pytest-mock",
    "pytest-sugar",
    "pytest-xdist",
    "pytest>=8.2",
    "tox>=4",
    "tox-docker>=4.1.0",
    "python-semantic-release>=8.0",
    "build>=1.0",
]

[tool.mypy]
disable_error_code = "import-untyped"
plugins = "sqlalchemy.ext.mypy.plugin"

[tool.black]
line-length = 80

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 81

[tool.setuptools_scm]
write_to = "data_product_tracker/_version.py"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.setuptools_scm.fallback_version"]
branch = "master"
upload_to_repository = true
upload_to_release = true
build_command = "python -m build"
commit_version_number = true
tag_commit = true
version_source = "tag"
commit_message = "chore: release {version}\n\n{changelog}"

[tool.semantic_release.branches.staging]
match = "staging"
prerelease = true
prerelease_token = "beta"
