[build-system]
requires = ["setuptools>=61.0", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "data_product_tracker"
version = "1.0.0"  # Managed by python-semantic-release
description = "An interface to track various data products and their dependencies and environments"
authors = [{name="William Fong", email="willfong@mit.edu"}]
readme = "README.rst"

dependencies = [
    "sqlalchemy>=2.0",
    "click>=8.0",
    "psycopg[binary]>=3.1.19",
    "setuptools>69.5",
    "deal",
    "mmh3",
    "configurables @ git+ssh://git@tessgit.mit.edu/wcfong/configurables.git",
]

[project.urls]
Home = "https://tessgit.mit.edu/wcfong/data-product-tracker"


[project.optional-dependencies]
dev = [
    "black>=24.4",
    "hypothesis>=6",
    "hypothesis_fspaths",
    "mypy==1.10",
    "pytest-cov",
    "pytest-mock",
    "pytest-sugar",
    "pytest-xdist",
    "pytest>=8.2",
    "tox>=4",
    "tox-docker>=4.1.0",
    "python-semantic-release>=8.0",
    "build>=1.0",
]

[tool.mypy]
disable_error_code = "import-untyped"
plugins = "sqlalchemy.ext.mypy.plugin"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.flake8]
max-line-length = 81

[tool.setuptools.packages.find]
where = ["src"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variable = ["src/data_product_tracker/__init__.py:__version__"]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install build && python -m build"
commit_parser = "angular"
major_on_zero = false
tag_format = "v{version}"
commit_message = "chore: release {version}\n\n{changelog}"

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.branches.staging]
match = "staging"
prerelease = true
prerelease_token = "beta"

[tool.semantic_release.commit_parser_options]
allowed_types = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_types = ["feat"]
patch_types = ["fix", "perf", "refactor", "build", "chore", "ci", "docs", "style", "test"]
